refactor: 주문, 주문 수정 관련 변수 변경
- classificationId, materialId, colorId 추가